--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="builds/RollABall/" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="builds/RollABall/" class="image"><img src="images/tutorial1.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Tutorial 1</h2>
