--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/zelda.jpg" alt="" data-position="center center" /></a>
+							<a href="zelda/" class="image"><img src="images/zelda.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Project 1</h2>
