Adding controls description

--- a/zelda/index.html
+++ b/zelda/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Project1</title>
+    <title>Unity WebGL Player | Zelda Remastered</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
@@ -13,12 +13,23 @@
     </script>
   </head>
   <body>
+    <div>
+      <h3>Controls:</h3>
+      <p>
+        X: A Weapon<br>
+        Z: B Weapon<br>
+        C: Rotate B Weapon<br>
+        Space: Special Ability<br>
+        1: Invincibility<br>
+        4: Custom Level<b>
+      </p>
+    </div>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 576px; height: 540px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Project1</div>
+        <div class="title">Zelda Remastered</div>
       </div>
     </div>
   </body>
