Added a button to play from the portfolio

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 									<p>With a partner, recreated the first dungeon of Zelda for NES using the Unity game engine.</p>
 									<ul class="actions">
 										<li><a href="zelda.zip" class="button">Click here to download (Windows + Mac)</a></li>
+										<li><a href="zelda/" class="button">Click here to Play WebBuild</a></li>
 									</ul>
 								</div>
 							</div>
