Added some text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Project 1</h2>
-									<p>With a partner, recreated the first dungeon of Zelda for NES using the Unity game engine.</p>
+									<p>Recreated the first dungeon of Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
 									<ul class="actions">
 										<li><a href="zelda.zip" class="button">Click here to download (Windows + Mac)</a></li>
 										<li><a href="zelda/" class="button">Click here to Play WebBuild</a></li>
