Adding some more buttons to zelda

--- a/index.html
+++ b/index.html
@@ -52,8 +52,11 @@
 									<p>Recreated the first dungeon of Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
 									<ul class="actions">
 										<li><a href="zelda.zip" class="button">Click here to download (Windows + Mac)</a></li>
+									</ul>
+									<ul class="actions">
 										<li><a href="zelda/" class="button">Click here to Play WebBuild</a></li>
 									</ul>
+									
 								</div>
 							</div>
 						</section>
