--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi, I'm Max Zawisa</h1>
 							<p>I am an EECS 494 Student</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Click here to view my projects.</a></li>
+								<li><a href="#one" class="button scrolly">View my projects.</a></li>
 							</ul>
 						</div>
 					</section>
@@ -49,12 +49,12 @@
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Project 1</h2>
-									<p>Recreated the first dungeon of Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
+									<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
 									<ul class="actions">
-										<li><a href="zelda.zip" class="button">Click here to download (Windows + Mac)</a></li>
+										<li><a href="zelda.zip" class="button">Download (Windows + Mac)</a></li>
 									</ul>
 									<ul class="actions">
-										<li><a href="zelda/" class="button">Click here to Play WebBuild</a></li>
+										<li><a href="zelda/" class="button">Play WebBuild</a></li>
 									</ul>
 									
 								</div>
