--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<h1>Hi, I'm Max Zawisa</h1>
 							<p>I am an EECS 494 Student</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">View my projects.</a></li>
+								<li><a href="#one" class="button scrolly">View my projects</a></li>
 							</ul>
 						</div>
 					</section>
