Added .gitignore and index change

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hi, I'm Max Zawisa</h1>
-							<p>I am an EECS 494 Student</p>
+							<p>I am an Undergraduate Student at The University of Michigan studying Computer Science.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">View my projects</a></li>
 							</ul>
@@ -67,7 +67,7 @@
 									<h2>EECS 494 Tutorial 1</h2>
 									<p>My first game ever, Roll-A-Ball</p>
 									<ul class="actions">
-										<li><a href="builds/RollABall/" class="button">Click here to play</a></li>
+										<li><a href="builds/RollABall/" class="button">Play WebBuild</a></li>
 									</ul>
 								</div>
 							</div>
