Added boiler plate for IntoOrbit Web Build

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="zelda/" class="image"><img src="images/zelda.jpg" alt="" data-position="center center" /></a>
+							<a href="zelda/" class="image"><img src="images/zelda.jpg" alt="zelda" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Project 1</h2>
@@ -61,7 +61,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="builds/RollABall/" class="image"><img src="images/tutorial1.jpg" alt="" data-position="top center" /></a>
+							<a href="builds/RollABall/" class="image"><img src="images/tutorial1.jpg" alt="roll-a-ball" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Tutorial 1</h2>
@@ -72,18 +72,18 @@
 								</div>
 							</div>
 						</section>
-						<!-- <section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+						<section>
+							<a href="builds/IntoOrbit/" class="image"><img src="images/pic03.jpg" alt="into-orbit" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Into Orbit</h2>
+									<p>This was my second project for EECS494 where I implemented a novel and technically challenging game mechanic. The mechanic I created was somewhat realistic orbital gravity.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
 									</ul>
 								</div>
 							</div>
-						</section> -->
+						</section>
 					</section>
 
 				<!-- Two -->
