Added a message saying p2 is not up yet

--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Into Orbit</h2>
-									<p>This was my second project for EECS494 where I implemented a novel and technically challenging game mechanic. The mechanic I created was somewhat realistic orbital gravity.</p>
-									<ul class="actions">
+									<p>This was my second project for EECS494 where I implemented
+                  a novel and technically challenging game mechanic. The
+                  mechanic I created was somewhat realistic orbital gravity.
+                  Upload to come SOON.</p>
+									<!--<ul class="actions">
 										<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
-									</ul>
+                  </ul>-->
 								</div>
 							</div>
 						</section>
