--- a/index.html
+++ b/index.html
@@ -73,17 +73,18 @@
 							</div>
 						</section>
 						<section>
-							<a href="builds/IntoOrbit/" class="image"><img src="images/pic03.jpg" alt="into-orbit" data-position="25% 25%" /></a>
+							<a href="builds/IntoOrbit/" class="image"><img
+                src="images/intoOrbit.png" alt="into-orbit" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Coming Soon: Into Orbit</h2>
+									<h2>Into Orbit</h2>
 									<p>This was my second project for EECS494 where I implemented
                   a novel and technically challenging game mechanic. The
                   mechanic I created was somewhat realistic orbital gravity.
-                  Upload to come SOON.</p>
-									<!--<ul class="actions">
+                  </p>
+									<ul class="actions">
 										<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
-                  </ul>-->
+                  </ul>
 								</div>
 							</div>
 						</section>
