--- a/index.html
+++ b/index.html
@@ -45,42 +45,42 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="zelda/" class="image"><img src="images/zelda.jpg" alt="zelda" data-position="center center" /></a>
+							<a href="builds/zelda/" class="image"><img src="images/zelda.jpg" alt="zelda" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>EECS 494 Project 1</h2>
 									<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
 									<ul class="actions">
-										<li><a href="zelda.zip" class="button">Download (Windows + Mac)</a></li>
+										<li><a href="downloads/zelda.zip" class="button">Download (Windows + Mac)</a></li>
 									</ul>
 									<ul class="actions">
-										<li><a href="zelda/" class="button">Play WebBuild</a></li>
+										<li><a href="builds/zelda/" class="button">Play WebBuild</a></li>
 									</ul>
-									
+
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="builds/RollABall/" class="image"><img src="images/tutorial1.jpg" alt="roll-a-ball" data-position="top center" /></a>
+							<a href="builds/TrickyTreaters/" class="image"><img src="images/trickyTreaters.jpg" alt="TrickyTreaters" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>EECS 494 Tutorial 1</h2>
-									<p>My first game ever, Roll-A-Ball</p>
+									<h2>Tricky Treaters</h2>
+									<p>Small game I made with a few classmates for a WolverineSoft Game Jam!<br> The theme was "Hoard/Horde". The goal of our game was to hoard as much candy as possible.</p>
 									<ul class="actions">
-										<li><a href="builds/RollABall/" class="button">Play WebBuild</a></li>
+										<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="builds/IntoOrbit/" class="image"><img
-                src="images/intoOrbit.png" alt="into-orbit" data-position="25% 25%" /></a>
+							<a href="builds/IntoOrbit/" class="image"><img src="images/intoOrbit.png" alt="into-orbit" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Into Orbit</h2>
-									<p>This was my second project for EECS494 where I implemented
-                  a novel and technically challenging game mechanic. The
-                  mechanic I created was somewhat realistic orbital gravity.
+									<p>This was my second project for EECS494 where I implemented a novel and technically challenging game mechanic. The mechanic I created was somewhat realistic orbital gravity.
                   </p>
 									<ul class="actions">
 										<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
