Fixed the link to the image for TrickyTreaters

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 							</div>
 						</section>
 						<section>
-							<a href="builds/TrickyTreaters/" class="image"><img src="images/trickyTreaters.jpg" alt="TrickyTreaters" data-position="top center" /></a>
+							<a href="builds/TrickyTreaters/" class="image"><img
+                                src="images/trickyTreaters.png" alt="TrickyTreaters" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tricky Treaters</h2>
