--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Tricky Treaters</h2>
-									<p>Small game I made with a few classmates for a WolverineSoft Game Jam!<br> The theme was "Hoard/Horde". The goal of our game was to hoard as much candy as possible.</p>
+									<p>Small game I made with a few classmates for a <a href="https://itch.io/jam/wsoft-pumpkin-2020">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde". The goal of our game was to hoard as much candy as possible.</p>
 									<ul class="actions">
 										<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
 									</ul>
