Added a privacy Policy

--- a/runwithmax.html
+++ b/runwithmax.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Max Zawisa</title>
+		<title>Max Zawisa - Run With Max</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,6 +21,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html" class="active">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
 			</header>
