--- a/index.html
+++ b/index.html
@@ -4,143 +4,180 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>Max Zawisa</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<html lang="en">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">About</a></li>
-							<li><a href="#three">Get in touch</a></li>
+<head>
+	<title>Max Zawisa</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">Projects</a></li>
+					<li><a href="#two">About</a></li>
+					<li><a href="#three">Get in touch</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Hi, I'm Max Zawisa</h1>
+				<p>I am an Undergraduate Student at The University of Michigan studying Computer Science.</p>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">View my projects</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- One -->
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<a href="builds/zelda/" class="image"><img src="images/zelda.jpg" alt="zelda"
+						data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>EECS 494 Project 1</h2>
+						<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added
+							a custom game mechanic and built a level to teach the player how to use it.</p>
+						<ul class="actions">
+							<li><a href="downloads/zelda.zip" class="button">Download (Windows + Mac)</a></li>
 						</ul>
-					</nav>
+						<ul class="actions">
+							<li><a href="builds/zelda/" class="button">Play WebBuild</a></li>
+						</ul>
+
+					</div>
 				</div>
 			</section>
+			<section>
+				<a href="builds/TrickyTreaters/" class="image"><img src="images/trickyTreaters.png" alt="TrickyTreaters"
+						data-position="top center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Tricky Treaters</h2>
+						<p>Small game I made with a few classmates for a <a
+								href="https://itch.io/jam/wsoft-pumpkin-2020" target="_blank"
+								rel="noopener noreferer">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde".
+							The goal of our game was to hoard as much candy as possible.</p>
+						<ul class="actions">
+							<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="builds/IntoOrbit/" class="image"><img src="images/intoOrbit.png" alt="into-orbit"
+						data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Into Orbit</h2>
+						<p>This was my second project for EECS494 where I implemented a novel and technically
+							challenging game mechanic. The mechanic I created was somewhat realistic orbital gravity.
+						</p>
+						<ul class="actions">
+							<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+						<iframe  src="https://www.youtube.com/embed/IA9-t4bQ39M" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				<div class="content">
+					<div class="inner">
+						<h2>Vesuvius</h2>
+						<p>This was my third and final project for EECS494 where a team of 4 students worked on one game
+							for 6
+							weeks. We presented our game a showcase with the other teams from our class.
+						</p>
+						<ul class="actions">
+							<li><a href="https://doingtimestudio.itch.io/vesuvius" class="button">Download from itch.io</a></li>
+						</ul>
+						<ul class="actions">
+							<li><a href="builds/Vesuvius/" class="button">Play WebBuild</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Hi, I'm Max Zawisa</h1>
-							<p>I am an Undergraduate Student at The University of Michigan studying Computer Science.</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">View my projects</a></li>
-							</ul>
-						</div>
+		<!-- Two -->
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>About Me</h2>
+				<p>I am an undergraduate student at the University of Michigan. I will be graduating April 2021. Here
+					are some of the upper level courses I have taken.</p>
+				<div class="features">
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>Data Structures and Algorithms</h3>
+						<p>Introduction to algorithm analysis and O-notation.</p>
 					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="builds/zelda/" class="image"><img src="images/zelda.jpg" alt="zelda" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>EECS 494 Project 1</h2>
-									<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added a custom game mechanic and built a level to teach the player how to use it.</p>
-									<ul class="actions">
-										<li><a href="downloads/zelda.zip" class="button">Download (Windows + Mac)</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="builds/zelda/" class="button">Play WebBuild</a></li>
-									</ul>
-
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="builds/TrickyTreaters/" class="image"><img
-                                src="images/trickyTreaters.png" alt="TrickyTreaters" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Tricky Treaters</h2>
-									<p>Small game I made with a few classmates for a <a href="https://itch.io/jam/wsoft-pumpkin-2020" target="_blank" rel="noopener noreferer">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde". The goal of our game was to hoard as much candy as possible.</p>
-									<ul class="actions">
-										<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="builds/IntoOrbit/" class="image"><img src="images/intoOrbit.png" alt="into-orbit" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Into Orbit</h2>
-									<p>This was my second project for EECS494 where I implemented a novel and technically challenging game mechanic. The mechanic I created was somewhat realistic orbital gravity.
-                  </p>
-									<ul class="actions">
-										<li><a href="builds/IntoOrbit/" class="button">Play WebBuild</a></li>
-                  </ul>
-								</div>
-							</div>
-						</section>
+					<section>
+						<span class="icon solid major fa-lock"></span>
+						<h3>Introduction to Computer Security</h3>
+						<p>Introduces the principles and practices of computer security as applied to software, host
+							systems, and networks.</p>
 					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>About Me</h2>
-							<p>I am an undergraduate student at the University of Michigan. I will be graduating April 2021. Here are some of the upper level courses I have taken.</p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Data Structures and Algorithms</h3>
-									<p>Introduction to algorithm analysis and O-notation.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Introduction to Computer Security</h3>
-									<p>Introduces the principles and practices of computer security as applied to software, host systems, and networks.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-code-branch"></span>
-									<h3>Software Engineering</h3>
-									<p>Pragmatic aspects of the production of software systems, dealing with structuring principles, design methodologies and informal analysis.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-database"></span>
-									<h3>Database Managment Systems</h3>
-									<p>Concepts and methods for the design, creation, query and managment of large enterprise databases.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Web Systems</h3>
-									<p>Concepts surrounding web systems, applications, and internet scale distributed systems. Topics include client/server protocols, security, information retrieval and search engines, scalable data processing, and fault tolerant systems.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-gamepad"></span>
-									<h3>Computer Game Design and Development</h3>
-									<p>Concepts and methods for the design and development of computer games.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="resume.pdf" target="_blank" rel="noopener noreferer" class="button">Click here to view my resume</a></li>
-							</ul>
-						</div>
+					<section>
+						<span class="icon solid major fa-code-branch"></span>
+						<h3>Software Engineering</h3>
+						<p>Pragmatic aspects of the production of software systems, dealing with structuring principles,
+							design methodologies and informal analysis.</p>
 					</section>
+					<section>
+						<span class="icon solid major fa-database"></span>
+						<h3>Database Managment Systems</h3>
+						<p>Concepts and methods for the design, creation, query and managment of large enterprise
+							databases.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>Web Systems</h3>
+						<p>Concepts surrounding web systems, applications, and internet scale distributed systems.
+							Topics include client/server protocols, security, information retrieval and search engines,
+							scalable data processing, and fault tolerant systems.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-gamepad"></span>
+						<h3>Computer Game Design and Development</h3>
+						<p>Concepts and methods for the design and development of computer games.</p>
+					</section>
+				</div>
+				<ul class="actions">
+					<li><a href="resume.pdf" target="_blank" rel="noopener noreferer" class="button">Click here to view
+							my resume</a></li>
+				</ul>
+			</div>
+		</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>If you are interested in talking more about my projects or course work, reach out to me!</p>
-							<div class="style1">
-								<!-- <section>
+		<!-- Three -->
+		<section id="three" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Get in touch</h2>
+				<p>If you are interested in talking more about my projects or course work, reach out to me!</p>
+				<div class="style1">
+					<!-- <section>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
@@ -161,57 +198,62 @@
 										</ul>
 									</form>
 								</section> -->
-								<section>
-									<ul class="contact">
-										<!-- <li>
+					<section>
+						<ul class="contact">
+							<!-- <li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li> -->
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:maxrzaw@umich.edu">maxrzaw@umich.edu</a>
-										</li>
-										<!-- <li>
+							<li>
+								<h3>Email</h3>
+								<a href="mailto:maxrzaw@umich.edu">maxrzaw@umich.edu</a>
+							</li>
+							<!-- <li>
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
 										</li> -->
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li>
+								<h3>Social</h3>
+								<ul class="icons">
+									<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-												<li><a href="https://github.com/maxrzaw" target="_blank" rel="noopener noreferer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/maxwell-zawisa/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
+									<li><a href="https://github.com/maxrzaw" target="_blank" rel="noopener noreferer"
+											class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/maxwell-zawisa/"
+											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+									</li>
+								</ul>
+							</li>
+						</ul>
 					</section>
-
-			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Maxwell Zawisa 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
 				</div>
-			</footer>
+			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Maxwell Zawisa 2020.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
