Adding itch embedded iframe

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 				</div>
 			</section>
 			<section>
-						<iframe  src="https://www.youtube.com/embed/IA9-t4bQ39M" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-						allowfullscreen></iframe>
+				<iframe src="https://www.youtube.com/embed/IA9-t4bQ39M" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
 				<div class="content">
 					<div class="inner">
 						<h2>Vesuvius</h2>
@@ -110,13 +110,17 @@
 							for 6
 							weeks. We presented our game a showcase with the other teams from our class.
 						</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="https://doingtimestudio.itch.io/vesuvius" class="button">Download from itch.io</a></li>
-						</ul>
+						</ul> -->
 						<ul class="actions">
 							<li><a href="builds/Vesuvius/" class="button">Play WebBuild</a></li>
 						</ul>
 					</div>
+					<iframe frameborder="0"
+						src="https://itch.io/embed/820128?border_width=0&amp;bg_color=5e42a6&amp;fg_color=ffffff&amp;link_color=ffffff&amp;border_color=363636"
+						width="550" height="165"><a href="https://doingtimestudio.itch.io/vesuvius">Vesuvius by DoingTimeStudio</a>
+					</iframe>
 				</div>
 			</section>
 		</section>
