Adding iOS App and small updates.
Added the iOS app to the spotlight section. Redesigned the rest of the
spotlight section and added another section so the coloring would
continue to change as the sections did. I think this is due to something
in the javascript or css.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
 <body class="is-preload">
@@ -48,45 +49,55 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="builds/zelda/" class="image"><img src="images/zelda.jpg" alt="zelda"
-						data-position="center center" /></a>
+				<a href="/" class="image"><img src="images/RunWithMax.png" alt="run-with-max"
+						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>EECS 494 Project 1</h2>
-						<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added
-							a custom game mechanic and built a level to teach the player how to use it.</p>
+						<h2>Run With Max iOS App</h2>
+						<p>
+							This was a project I worked on during the summer of 2020. I created a REST API using django
+							for the back end. I created a iOS app to interface with the API using React-Native.
+						</p>
 						<ul class="actions">
-							<li><a href="downloads/zelda.zip" class="button">Download (Windows + Mac)</a></li>
+							<li><a href="/" class="button">Download</a></li>
 						</ul>
-						<ul class="actions">
-							<li><a href="builds/zelda/" class="button">Play WebBuild</a></li>
-						</ul>
-
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="builds/TrickyTreaters/" class="image"><img src="images/trickyTreaters.png" alt="TrickyTreaters"
-						data-position="top center" /></a>
+				<a href="https://www.youtube.com/embed/IA9-t4bQ39M" class="image"><img src="images/VesuviusCover.png"
+						alt="vesuvius-cover" data-position="center top" /></a>
 				<div class="content">
-					<div class="inner">
-						<h2>Tricky Treaters</h2>
-						<p>Small game I made with a few classmates for a <a
-								href="https://itch.io/jam/wsoft-pumpkin-2020" target="_blank"
-								rel="noopener noreferer">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde".
-							The goal of our game was to hoard as much candy as possible.</p>
-						<ul class="actions">
-							<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
-						</ul>
-						<ul class="actions">
-							<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
-						</ul>
+					<!-- <iframe src="https://www.youtube.com/embed/IA9-t4bQ39M" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen data-position="center center"></iframe> -->
+					<div class="content">
+						<div class="inner">
+							<h2>Vesuvius</h2>
+							<p>This was my third and final project for EECS494 where a team of 4 students worked on one
+								game
+								for 6
+								weeks. We presented our game a showcase with the other teams from our class.
+							</p>
+							<ul class="actions">
+								<li><a href="builds/Vesuvius/" class="button">Play WebBuild</a></li>
+								<li><a href="https://www.youtube.com/embed/IA9-t4bQ39M" class="button">Watch Trailer</a>
+								</li>
+							</ul>
+						</div>
+						<iframe frameborder="0"
+							src="https://itch.io/embed/820128?border_width=5&amp;bg_color=5052b5&amp;fg_color=fff&amp;link_color=312450&amp;border_color=312450"
+							width="560" height="175"><a href="https://doingtimestudio.itch.io/vesuvius">Vesuvius by
+								DoingTimeStudio,
+								maxrzaw</a>
+						</iframe>
 					</div>
-				</div>
 			</section>
+
+
 			<section>
 				<a href="builds/IntoOrbit/" class="image"><img src="images/intoOrbit.png" alt="into-orbit"
-						data-position="25% 25%" /></a>
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Into Orbit</h2>
@@ -99,30 +110,41 @@
 					</div>
 				</div>
 			</section>
+		</section>
+		<section class="wrapper style2 spotlights">
 			<section>
-				<iframe src="https://www.youtube.com/embed/IA9-t4bQ39M" frameborder="0"
-					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-					allowfullscreen></iframe>
+				<a href="builds/zelda/" class="image"><img src="images/zelda.jpg" alt="zelda"
+						data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Vesuvius</h2>
-						<p>This was my third and final project for EECS494 where a team of 4 students worked on one game
-							for 6
-							weeks. We presented our game a showcase with the other teams from our class.
-						</p>
-						<!-- <ul class="actions">
-							<li><a href="https://doingtimestudio.itch.io/vesuvius" class="button">Download from itch.io</a></li>
-						</ul> -->
+						<h2>EECS 494 Project 1</h2>
+						<p>Recreated the first dungeon of 1986 Classic Zelda for NES using the Unity game engine. Added
+							a custom game mechanic and built a level to teach the player how to use it.</p>
 						<ul class="actions">
-							<li><a href="builds/Vesuvius/" class="button">Play WebBuild</a></li>
+							<li><a href="downloads/zelda.zip" class="button">Download (Windows + Mac)</a></li>
+							<li><a href="builds/zelda/" class="button">Play WebBuild</a></li>
 						</ul>
 					</div>
-					<iframe frameborder="0"
-						src="https://itch.io/embed/820128?border_width=0&amp;bg_color=5e42a6&amp;fg_color=ffffff&amp;link_color=ffffff&amp;border_color=363636"
-						width="550" height="165"><a href="https://doingtimestudio.itch.io/vesuvius">Vesuvius by DoingTimeStudio</a>
-					</iframe>
 				</div>
 			</section>
+			<section>
+				<a href="builds/TrickyTreaters/" class="image"><img src="images/trickyTreaters.png" alt="TrickyTreaters"
+						data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Tricky Treaters</h2>
+						<p>Small game I made with a few classmates for a <a
+								href="https://itch.io/jam/wsoft-pumpkin-2020" target="_blank"
+								rel="noopener noreferer">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde".
+							The goal of our game was to hoard as much candy as possible.</p>
+						<ul class="actions">
+							<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
+							<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
 		</section>
 
 		<!-- Two -->
