Fixed resume button.
Fixed the bad design choice to have the button say "click here.." when
it is obviously a button. Still need to finish updating my resume and
upload an updated copy.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 					</section>
 				</div>
 				<ul class="actions">
-					<li><a href="resume.pdf" target="_blank" rel="noopener noreferer" class="button">Click here to view
+					<li><a href="resume.pdf" target="_blank" rel="noopener
+                            noreferer" class="button">View
 							my resume</a></li>
 				</ul>
 			</div>
