--- a/builds/zelda/index.html
+++ b/builds/zelda/index.html
@@ -32,7 +32,7 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="generic.html" class="active">Generic</a></li>
+				<li><a href="generic.html" class="active">Zelda</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -43,18 +43,25 @@
 		<!-- Main -->
 		<section id="main" class="wrapper">
 			<div class="inner">
-				<h1 class="major">A Generic Page</h1>
-				<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-				<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque
-					venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor
-					sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu
-					massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris.
-					Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis,
-					hendrerit tristique.</p>
-				<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet
-					dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque
-					leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum
-					convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+				<div>
+					<h3>Controls:</h3>
+					<p>
+						X: A Weapon<br>
+						Z: B Weapon<br>
+						C: Rotate B Weapon<br>
+						Space: Special Ability<br>
+						1: Invincibility<br>
+						4: Custom Level<b>
+					</p>
+				</div>
+				<div class="webgl-content">
+					<div id="unityContainer" style="width: 576px; height: 540px"></div>
+					<div class="footer">
+						<div class="webgl-logo"></div>
+						<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+						<div class="title">Zelda Remastered</div>
+					</div>
+				</div>
 			</div>
 		</section>
 
