trying to center the webGL

--- a/builds/zelda/index.html
+++ b/builds/zelda/index.html
@@ -54,7 +54,7 @@
 						4: Custom Level<b>
 					</p>
 				</div>
-				<div class="webgl-content">
+				<div class="webgl-content" data-position="center center">
 					<div id="unityContainer" style="width: 576px; height: 540px"></div>
 					<div class="footer">
 						<div class="webgl-logo"></div>
