Making some changes to the zelda web build.

--- a/builds/zelda/index.html
+++ b/builds/zelda/index.html
@@ -31,18 +31,18 @@
 		<a href="index.html" class="title">Max Zawisa</a>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="generic.html" class="active">Zelda</a></li>
+				<li><a href="../../index.html">Home</a></li>
+				<li><a href="index.html" class="active">Zelda</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<!-- Wrapper -->
-	<div id="wrapper">
+	<div id="wrapper" style="height: 100%;">
 
 		<!-- Main -->
 		<section id="main" class="wrapper">
-			<div class="inner">
+			<div style="height: 540px;" class="inner">
 				<div>
 					<h3>Controls:</h3>
 					<p>
@@ -54,12 +54,13 @@
 						4: Custom Level<b>
 					</p>
 				</div>
-				<div class="webgl-content" data-position="center center">
+				<div class="webgl-content" style="height: 100%;">
 					<div id="unityContainer" style="width: 576px; height: 540px"></div>
-					<div class="footer">
+					<!--<div class="footer">
 						<div class="webgl-logo"></div>
 						<div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
 						<div class="title">Zelda Remastered</div>
+                    -->
 					</div>
 				</div>
 			</div>
