--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<!-- One -->
 		<section id="one" class="wrapper style2 spotlights">
 			<section>
-				<a href="/" class="image"><img src="images/RunWithMax.png" alt="run-with-max"
+				<a href="runwithmax.html" class="image"><img src="images/RunWithMax.png" alt="run-with-max"
 						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
