Updating Run With Max Page.
Added a link from the app page to TestFlight.
Added some descriptions to the app page as well as the portfolio page.
Added a rounded corner version of the app icon. Added a link back to the
app from the privacy policy page.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 					<div class="inner">
 						<h2>Run With Max iOS App</h2>
 						<p>
-							This was a project I worked on during the summer of 2020. I created a REST API using django
-							for the back end. I created a iOS app to interface with the API using React-Native.
+							During the summer of 2020 I created an iPhone app to serve as an interactive running log for the members of my club running team! It is built using Django and React Native.
 						</p>
 						<ul class="actions">
-							<li><a href="/" class="button">Download</a></li>
+							<li><a href="https://testflight.apple.com/join/vo8TQgJV" class="button" target="_blank" rel="noopener noreferrer">Download</a></li>
+							<li><a href="runwithmax.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 				</div>
