--- a/runwithmax.html
+++ b/runwithmax.html
@@ -5,59 +5,121 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Max Zawisa - Run With Max</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Max Zawisa</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="runwithmax.html" class="active">Run With Max</a></li>
-						<li><a href="privacy.html">Privacy</a></li>
-					</ul>
-				</nav>
-			</header>
+<head>
+	<title>Max Zawisa - Run With Max</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<body class="is-preload">
 
-				<!-- Main -->
-					<section id="main" class="wrapper">
-						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/screenshots/iPhone11ProMax_Activity.png" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-						</div>
-					</section>
+	<!-- Header -->
+	<header id="header">
+		<a href="index.html" class="title">Max Zawisa</a>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="runwithmax.html" class="active">Run With Max</a></li>
+				<li><a href="https://testflight.apple.com/join/vo8TQgJV" target="_blank" rel="noopener noreferrer">Download</a></li>
+				<li><a href="privacy.html">Privacy</a></li>
+			</ul>
+		</nav>
+	</header>
 
-			</div>
+	<!-- Wrapper -->
+	<div id="wrapper">
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
+		<!-- Main -->
+		<section id="main" class="wrapper">
+			<div class="inner">
+
+				<h1 class="major">Run With Max</h1>
+				<div class="row">
+					<span class="image left"><img src="images/RunWithMaxRounded.png" alt="" /></span>
+					<div>
+						<h2>Goals</h2>
+						<ul>
+							<li>Provide MRun Sprinters with a community running log</li>
+							<li>Encourage Sprinters to keep working out</li>
+							<li>Distribute the training plan</li>
+							<li>Keep feature set minimal</li>
+							<li>Proof of concept with React Native and Django</li>
+						</ul>
+					</div>
+					<p>I built this app during the summer of 2020.
+						It is designed as a tool to help the MRun Sprinters keep track of their workouts and provide
+						some motivation for us to keep running even when we cannot run together anymore.
+						The promary focus was to build a platform for sharing our workouts with each other without all
+						the unnecessary features found in running apps like strava since most of us don't have running
+						watches.
+						Most of us that record our runs use plain text and don't share, but this will allow us to
+						motivate each other to run more.
+						I built the back end server using <a href="https://www.djangoproject.com/" target="_blank"
+							rel="noopener noreferrer">Django</a> and the front end was built using <a
+							href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a>.
+					</p>
+					<p>The app is currently available for iPhone on Apple TestFlight. You can download the app <a
+							href="https://testflight.apple.com/join/vo8TQgJV" target="_blank"
+							rel="noopener noreferrer">here</a>.</p>
 				</div>
-			</footer>
+				<h2>Screenshots</h2>
+				<div class="row gtr-uniform">
+					<div class="col-3"><span class="image fit"><img src="images/screenshots/iPhone8Plus_Activity.png"
+								alt="Activity Screen" /></span></div>
+					<div class="col-3"><span class="image fit"><img src="images/screenshots/iPhone8Plus_Workouts.png"
+								alt="Workout Screen" /></span></div>
+					<div class="col-3"><span class="image fit"><img src="images/screenshots/iPhone8Plus_Suggestions.png"
+								alt="Suggestion Screen" /></span></div>
+					<div class="col-3"><span class="image fit"><img src="images/screenshots/iPhone8Plus_Profile.png"
+								alt="Profile Screen" /></span></div>
+				</div>
+				<div class="row gtr-uniform">
+					<div class="col-3">
+						<p>Activity Screen - This is where you can view an instagram like feed of everyones workouts.
+							You can create activities from anywhere workouts can be found.</p>
+					</div>
+					<div class="col-3">
+						<p>Workouts Screen - This is where you can view workouts that have already been created by
+							others as well as create your own new workouts.</p>
+					</div>
+					<div class="col-3">
+						<p>Suggestion Screen - This is where you will find the suggested workout for the day as uploaded
+							by your coach. You can change days and training groups using the controls at the top.</p>
+					</div>
+					<div class="col-3">
+						<p>Profile Screen. - This is where you can view all your activities as well as your profile
+							info.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+	<!-- Footer -->
+	<footer id="footer" class="wrapper alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
