--- a/privacy.html
+++ b/privacy.html
@@ -23,6 +23,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="runwithmax.html">Run With Max</a></li>
+				<li><a href="https://testflight.apple.com/join/vo8TQgJV" target="_blank" rel="noopener noreferrer">Download</a></li>
 				<li><a href="privacy.html" class="active">Privacy</a></li>
 			</ul>
 		</nav>
