Updated links to app store.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							During the summer of 2020 I created an iPhone app to serve as an interactive running log for the members of my club running team! It is built using Django and React Native.
 						</p>
 						<ul class="actions">
-							<li><a href="https://testflight.apple.com/join/vo8TQgJV" class="button" target="_blank" rel="noopener noreferrer">Download</a></li>
+							<li><a href="https://apps.apple.com/us/app/run-with-max/id1530316310" class="button" target="_blank" rel="noopener noreferrer">Download</a></li>
 							<li><a href="runwithmax.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
