--- a/runwithmax.html
+++ b/runwithmax.html
@@ -25,7 +25,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="runwithmax.html" class="active">Run With Max</a></li>
-				<li><a href="https://testflight.apple.com/join/vo8TQgJV" target="_blank" rel="noopener noreferrer">Download</a></li>
+				<li><a href="https://apps.apple.com/us/app/run-with-max/id1530316310" target="_blank" rel="noopener noreferrer">Download</a></li>
 				<li><a href="privacy.html">Privacy</a></li>
 			</ul>
 		</nav>
@@ -63,8 +63,8 @@
 							rel="noopener noreferrer">Django</a> and the front end was built using <a
 							href="https://reactnative.dev/" target="_blank" rel="noopener noreferrer">React Native</a>.
 					</p>
-					<p>The app is currently available for iPhone on Apple TestFlight. You can download the app <a
-							href="https://testflight.apple.com/join/vo8TQgJV" target="_blank"
+					<p>You can download the app from the App Store <a
+							href="https://apps.apple.com/us/app/run-with-max/id1530316310" target="_blank"
 							rel="noopener noreferrer">here</a>.</p>
 				</div>
 				<h2>Screenshots</h2>
@@ -80,8 +80,8 @@
 				</div>
 				<div class="row gtr-uniform">
 					<div class="col-3">
-						<p>Activity Screen - This is where you can view an instagram like feed of everyones workouts.
-							You can create activities from anywhere workouts can be found.</p>
+						<p>Activity Screen - This is where you can view a feed
+                        of everyone's workouts. You can create activities from anywhere workouts can be found.</p>
 					</div>
 					<div class="col-3">
 						<p>Workouts Screen - This is where you can view workouts that have already been created by
