--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Hi, I'm Max Zawisa</h1>
-				<p>I am an Undergraduate Student at The University of Michigan studying Computer Science.</p>
+				<p>I am a software engineer who loves making things better!</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">View my projects</a></li>
 				</ul>
@@ -150,8 +150,7 @@
 		<section id="two" class="wrapper style3 fade-up">
 			<div class="inner">
 				<h2>About Me</h2>
-				<p>I am an undergraduate student at the University of Michigan. I will be graduating April 2021. Here
-					are some of the upper level courses I have taken.</p>
+				<p>Here are some of the notable courses I took in undergrad.</p>
 				<div class="features">
 					<section>
 						<span class="icon solid major fa-code"></span>
