Add TicTacToe files

--- a/index.html
+++ b/index.html
@@ -143,6 +143,23 @@
 					</div>
 				</div>
 			</section>
+			<section>
+				<a href="tic-tac-toe/index.html" class="image"><img src="images/pic01.jpg" alt="TicTacToe"
+						data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Tic Tac Toe</h2>
+						<p>Small game I made with a few classmates for a <a
+								href="https://itch.io/jam/wsoft-pumpkin-2020" target="_blank"
+								rel="noopener noreferer">WolverineSoft Game Jam!</a><br> The theme was "Hoard/Horde".
+							The goal of our game was to hoard as much candy as possible.</p>
+						<ul class="actions">
+							<li><a href="downloads/trickyTreaters.zip" class="button">Download (Windows + Mac)</a></li>
+							<li><a href="builds/TrickyTreaters/" class="button">Play WebBuild</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
 
 		</section>
 
