small wording change

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>Hi, I'm Max Zawisa</h1>
-				<p>I am a software engineer who loves making things better!</p>
+				<p>I am a software engineer who loves solving problems and making things better!</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">View my projects</a></li>
 				</ul>
@@ -55,7 +55,8 @@
 					<div class="inner">
 						<h2>Run With Max iOS App</h2>
 						<p>
-							During the summer of 2020 I created an iPhone app to serve as an interactive running log for the members of my club running team! It is built using Django and React Native.
+							During the summer of 2020 I created an iPhone app to serve as an interactive running log for
+							the members of my club running team! It is built using Django and React Native.
 						</p>
 						<ul class="actions">
 							<li><a href="runwithmax.html" class="button">Learn More</a></li>
